<resources>
    <string name="app_name">LogicaApp</string>
    <string name="title_main_activity">Conjuction (AND)</string>
    <string name="column_one">A</string>
    <string name="column_two">B</string>
    <string name="column_three">A ^ B</string>
    <string name="question_one_a">T</string>
    <string name="question_one_b">T</string>
    <string name="question_two_a">T</string>
    <string name="question_two_b">F</string>
    <string name="question_three_a">F</string>
    <string name="question_three_b">T</string>
    <string name="question_four_a">F</string>
    <string name="question_four_b">F</string>
    <string name="hint_answer">F or T</string>
    <string name="btn_submit">Check Answers</string>
    <string name="correct_answers">The correct number of answers is: %d</string>
    <string name="allowed_answer_input">ftFT</string>
</resources>
