<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_main_activity"
        android:textAlignment="center"
        android:textSize="@dimen/tv_default_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvColumnOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_default_margin_top"
        android:layout_weight="1"
        android:padding="@dimen/default_padding"
        android:text="@string/column_one"
        android:textAlignment="center"
        android:textSize="@dimen/tv_default_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvColumnTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleActivity" />

    <TextView
        android:id="@+id/tvColumnTwo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_default_margin_top"
        android:layout_weight="1"
        android:padding="@dimen/default_padding"
        android:text="@string/column_two"
        android:textAlignment="center"
        android:textSize="@dimen/tv_default_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvColumnThree"
        app:layout_constraintStart_toEndOf="@+id/tvColumnOne"
        app:layout_constraintTop_toBottomOf="@+id/titleActivity" />

    <TextView
        android:id="@+id/tvColumnThree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_default_margin_top"
        android:layout_weight="1"
        android:padding="@dimen/default_padding"
        android:text="@string/column_three"
        android:textAlignment="center"
        android:textSize="@dimen/tv_default_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvColumnTwo"
        app:layout_constraintTop_toBottomOf="@+id/titleActivity" />

    <TextView
        android:id="@+id/tvQuestionOneA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/default_padding"
        android:text="@string/question_one_a"
        android:textAlignment="center"
        android:textSize="@dimen/tv_default_size"
        app:layout_constraintEnd_toStartOf="@+id/tvQuestionOneB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvColumnOne" />

    <TextView
        android:id="@+id/tvQuestionOneB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/default_padding"
        android:text="@string/question_one_b"
        android:textAlignment="center"
        android:textSize="@dimen/tv_default_size"
        app:layout_constraintEnd_toStartOf="@+id/etQuestionOneAnswer"
        app:layout_constraintStart_toEndOf="@+id/tvQuestionOneA"
        app:layout_constraintTop_toBottomOf="@+id/tvColumnTwo" />

    <EditText
        android:id="@+id/etQuestionOneAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:accessibilityLiveRegion="polite"
        android:digits="@string/allowed_answer_input"
        android:ems="10"
        android:hint="@string/hint_answer"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions|textCapCharacters"
        android:maxLength="@integer/allowed_answer_length"
        android:maxLines="@integer/allowed_answer_length"
        android:nextFocusDown="@id/etQuestionTwoAnswer"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/tvQuestionOneB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvQuestionOneB"
        app:layout_constraintTop_toBottomOf="@+id/tvColumnThree" />

    <TextView
        android:id="@+id/tvQuestionTwoA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/default_padding"
        android:text="@string/question_two_a"
        android:textAlignment="center"
        android:textSize="@dimen/tv_default_size"
        app:layout_constraintEnd_toStartOf="@+id/tvQuestionTwoB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionOneA" />

    <TextView
        android:id="@+id/tvQuestionTwoB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/default_padding"
        android:text="@string/question_two_b"
        android:textAlignment="center"
        android:textSize="@dimen/tv_default_size"
        app:layout_constraintEnd_toStartOf="@+id/etQuestionTwoAnswer"
        app:layout_constraintStart_toEndOf="@+id/tvQuestionTwoA"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionOneB" />

    <EditText
        android:id="@+id/etQuestionTwoAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:accessibilityLiveRegion="polite"
        android:digits="@string/allowed_answer_input"
        android:ems="10"
        android:hint="@string/hint_answer"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions|textCapCharacters"
        android:maxLength="@integer/allowed_answer_length"
        android:maxLines="@integer/allowed_answer_length"
        android:nextFocusDown="@id/etQuestionThreeAnswer"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/tvQuestionTwoB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvQuestionTwoB"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionOneB" />

    <TextView
        android:id="@+id/tvQuestionThreeA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/default_padding"
        android:text="@string/question_three_a"
        android:textAlignment="center"
        android:textSize="@dimen/tv_default_size"
        app:layout_constraintEnd_toStartOf="@+id/tvQuestionThreeB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionTwoA" />

    <TextView
        android:id="@+id/tvQuestionThreeB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/default_padding"
        android:text="@string/question_three_b"
        android:textAlignment="center"
        android:textSize="@dimen/tv_default_size"
        app:layout_constraintEnd_toStartOf="@+id/etQuestionThreeAnswer"
        app:layout_constraintStart_toEndOf="@+id/tvQuestionThreeA"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionTwoB" />

    <EditText
        android:id="@+id/etQuestionThreeAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:accessibilityLiveRegion="polite"
        android:digits="@string/allowed_answer_input"
        android:ems="10"
        android:hint="@string/hint_answer"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions|textCapCharacters"
        android:maxLength="@integer/allowed_answer_length"
        android:maxLines="@integer/allowed_answer_length"
        android:nextFocusDown="@id/etQuestionFourAnswer"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/tvQuestionThreeB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvQuestionThreeB"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionTwoB" />

    <TextView
        android:id="@+id/tvQuestionFourA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/default_padding"
        android:text="@string/question_four_a"
        android:textAlignment="center"
        android:textSize="@dimen/tv_default_size"
        app:layout_constraintEnd_toStartOf="@+id/tvQuestionFourB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionThreeA" />

    <TextView
        android:id="@+id/tvQuestionFourB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/default_padding"
        android:text="@string/question_four_b"
        android:textAlignment="center"
        android:textSize="@dimen/tv_default_size"
        app:layout_constraintEnd_toStartOf="@+id/etQuestionFourAnswer"
        app:layout_constraintStart_toEndOf="@+id/tvQuestionFourA"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionThreeB" />

    <EditText
        android:id="@+id/etQuestionFourAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:accessibilityLiveRegion="polite"
        android:digits="@string/allowed_answer_input"
        android:ems="10"
        android:hint="@string/hint_answer"
        android:imeOptions="actionDone"
        android:inputType="textNoSuggestions|textCapCharacters"
        android:maxLength="@integer/allowed_answer_length"
        android:maxLines="@integer/allowed_answer_length"
        android:nextFocusDown="@id/btnSubmit"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/tvQuestionFourB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvQuestionFourB"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionThreeB" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionFourB" />

</androidx.constraintlayout.widget.ConstraintLayout>